[package]
name = "morrsse"
license = "Unlicense OR MIT OR Apache-2.0"
homepage = "https://github.com/acheronfail/morrsse"
repository = "https://github.com/acheronfail/morrsse"
description = "Remake of BSD's `morse`"
version = "0.1.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "3.0.0-beta.2" }
